Remove unnecessary config from cri.yaml files